# TestTaskAstrom

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: database.py
app/models/: emp.py
app/routers/: emp.py
app/schemas/: base_schema.py
app/templates/: base.html
app/templates/employees/: form.html  list.html
app/utils/: files.py
